# inventory-desktop

./: .env.development.sample  .env.production.sample  .env.sample  .eslintrc.json  .gitignore  README.md  cypress.config.ts  docker-compose.test.yml  eslint.config.js  generate-bundle-scss.cjs  index.html  jest.config.ts  latest.json  latest.staging.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  publish.sample.sh  publish.staging.sample.sh  scss-bundling.config.json  tsconfig.json  vite.config.ts  vitest.config.ts  watch-bundle-scss.cjs  wdio.conf.ts
.github/workflows/: build_release.yml  deploy.yml  eslint.yml  playwright.yml  publish.yml  stylelint.yml  vitest.yml
cypress/e2e/: alerts.cy.ts  dashboard.cy.ts  partDetails.cy.ts
cypress/support/: utils.ts
src/: main.tsx
src-tauri/: .gitignore  Brother  Cargo.toml  tauri.conf.json  tauri.staging.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: email.rs  main.rs  printing.rs
src/components/: App.tsx  CreditCardBlock.tsx  CustomerContactsBlock.tsx  EditEngineDetails.tsx  EditEnginePartsTable.tsx  EditHandwrittenDetails.tsx  EditInvoiceDetails.tsx  EditPartDetails.tsx  EditPurchaseOrderDetails.tsx  EditReturnDetails.tsx  EditWarrantyDetails.tsx  EngineCostIn.tsx  EngineCostOut.tsx  EnginePartsTable.tsx  ErrorBoundry.tsx  GlobalData.tsx  HandwrittenItemsTable.tsx  InvoiceItemsTable.tsx  Layout.tsx  Login.tsx  Navbar.tsx  NewEnginesQuoteList.tsx  PartCostIn.tsx  PreventNavigation.tsx  Print.tsx  PurchaseOrderItemsTable.tsx  ReturnItemsTable.tsx  WarrantyItemsTable.tsx  WarrantyItemsTableDetails.tsx
src/containers/: AccountingContainer.tsx  AlertsContainer.tsx  CompareConsistContainer.tsx  CoresContainer.tsx  CustomerDetailsContainer.tsx  CustomerMergeContainer.tsx  EmailStuffContainer.tsx  EngineListContainer.tsx  ImageUploadContainer.tsx  MapContainer.tsx  PartDetailsContainer.tsx  PerformanceContainer.tsx  ReportsContainer.tsx  ReturnDetailsContainer.tsx  SurplusContainer.tsx  ToastContainer.tsx  WarrantyDetailsContainer.tsx
src/hooks/: useArrowSelector.tsx  useAutoSave.tsx  useClickOutside.tsx  useDebouncedValue.tsx  useHotkeys.tsx  useNavState.tsx  usePdfQue.tsx  usePreventNavigation.tsx  usePrintQue.tsx  (+2 more)
tests/: search.test.ts  stringUtils.test.ts  utils.test.ts  utils.ts
(+540 files in other folders)
