[package]
name = "app"
version = "0.0.1"
description = "Inventory"
authors = ["Midwest Diesel"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = [ "updater", "shell-all"] }
log = "0.4"
simplelog = "0.11"
url = "2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
debug = true
debug-assertions = true
opt-level = 0

[profile.release.package.wry]
debug = true
debug-assertions = true
