[package]
name = "app"
version = "1.0.0"
description = "Inventory"
authors = ["Midwest Diesel"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = [ "fs-all", "window-all", "http-all", "dialog-all", "updater", "shell-all"] }
log = "0.4"
simplelog = "0.11"
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
async-std = "1.10"
base64 = "0.21"
image = "0.24"
dialog = "0.3.0"
tauri-macros = "1.4.7"
imageproc = "0.23.0"
dotenv = "0.15"
file-operation = "0.8.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
debug = true
debug-assertions = true
opt-level = 0

[profile.release.package.wry]
debug = true
debug-assertions = true
